Added 2 new pages and some fixes

--- a/themes/airevisuelle/layouts/catalogue/list.html
+++ b/themes/airevisuelle/layouts/catalogue/list.html
@@ -7,7 +7,7 @@
               <h1>{{.Params.titre}}</h1>
               <hr>
           </div>
-          <p style="margin-bottom: 80px;">Avec plus de 20 marques différentes offertes, l’Aire Visuelle vous offre une grande variété de lunettes et de monture ! Voici quelques unes de nos marques les plus populaires: </p>
+          <p style="margin-bottom: 80px;">Avec plusieurs marques différentes offertes, l’Aire Visuelle vous offre une grande variété de lunettes et de monture ! Voici quelques unes de nos marques les plus populaires: </p>
           <div class="portfolio row no-gutters row-eq-height">
           	 	<div class="col-md-9 col-sm-12 col-eq-height">
           	 			<!-- Portfolio Items -->
@@ -39,8 +39,8 @@
                   <!--call-to-action colored background -->
                   <div class="call-to-action call-to-action-dark">
                       <h3>Vous ne trouvez pas le <span>produit</span> que vous cherchez?</h3>
-                      <p>Prenez rendez-vous avec un expert facilement grâce à notre systèmes de réservation en ligne !</p>
-                      <a class="btn btn-outline btn-light" href="/rendez-vous">Rendez-vous</a> </div>
+                      <p>Prenez rendez-vous avec un expert !</p>
+                      <a class="btn btn-outline btn-light" href="/rendez-vous-opticien">Rendez-vous</a> </div>
 
                   <!--END: call-to-action colored background -->
               </div>
