--- a/themes/airevisuelle/layouts/partials/header/topbar.html
+++ b/themes/airevisuelle/layouts/partials/header/topbar.html
@@ -6,6 +6,7 @@
 				<ul class="top-menu">
 					<li class="separated"><a href="tel:{{.Site.Data.settings.mphone}}">{{.Site.Data.settings.phone}}</a></li>
 					<li><a href="mailto:{{.Site.Data.settings.email}}">{{.Site.Data.settings.email}}</a></li>
+					<li><a href="https://www.visionavenue.ca/fr/" target="_blank" style="display: inline-block;">Vision Avenue</a></li>
 				</ul>
 			</div>
 			<div class="col-sm-6 hidden-xs">
