--- a/themes/airevisuelle/layouts/singles/a-propos.html
+++ b/themes/airevisuelle/layouts/singles/a-propos.html
@@ -22,9 +22,9 @@
 						</div>
 					</div>
 					<div class="col-md-9">
-						<div class="col-md-6">L’équipe de L’Aire Visuelle est heureuse de vous accueillir dans sa nouvelle clinique de Vimont à Laval. Chic, spacieuse et moderne, la salle de montre vous en mettra plein la vue avec ses vastes collections de montures, dont sa sélection « haut de gamme ». Que ce soit pour des lunettes de prescription, des lunettes solaires ou des verres de contact, « L’Aire Visuelle » vous promet de vivre une expérience unique en matière de lunetterie. <br> <br> Consultez notre section produits pour voir quelques-unes de nos montures et de nos lunettes de soleil disponibles dans notre nouvelle salle d’exposition. Et Rappelez-vous… Il ne s’agit que d’un petit échantillonnage des 1400 montures sélectionnées judicieusement pour notre clientèle. </div>
+						<div class="col-md-6">L’équipe de L’Aire Visuelle est heureuse de vous accueillir dans sa nouvelle clinique de Vimont à Laval. Chic, spacieuse et moderne, la salle de montre vous en mettra plein la vue avec ses vastes collections de montures. Que ce soit pour des lunettes de prescription, des lunettes solaires ou des verres de contact, L’Aire Visuelle vous promet de vivre une expérience unique en matière de lunetterie. <br> <br> Consultez notre section produits pour voir quelques-unes de nos montures et de nos lunettes de soleil disponibles dans notre salle d’exposition. Et Rappelez-vous… Il ne s’agit que d’un petit échantillonnage de notre panoplie de montures sélectionnées judicieusement pour notre clientèle. </div>
 
-						<div class="col-md-6">Notre expérience et nos bonnes relations d’affaire auprès des fabricants de montures et des couturiers de grande réputation nous ont permis au fil des ans d’obtenir certains privilèges et l’exclusivité de les représenter ! Nos montures sont Exclusives ! Colorées ! Faits main ! Confortables ! Légères ! Notre grande sélection reflète les tendances actuelles de la mode en matière de lunetterie, elle répond aux besoins de notre fidèle clientèle que nous apprécions et sera très certainement plaire à nos « futurs clients ».
+						<div class="col-md-6">Notre grande sélection reflète les tendances actuelles de la mode en matière de lunetterie, elle répond aux besoins de notre fidèle clientèle que nous apprécions et sera très certainement plaire à nos futurs clients.
 						</div>
 					</div>
 
@@ -41,21 +41,21 @@
 						<h6 class="text-large text-uppercase">01.</h6>
 						<img src="/img/logo-bg-w.png" alt="Aire visuelle" class="logo-bg">
 		                <h3>EXPÉRIENCE</h3>
-						<span>La réussite de notre entreprise « L’Aire Visuelle » repose surtout sur notre équipe composée de tous les intervenants et professionnels du domaine de l’optique. Toujours à l’affût des nouvelles technologies, ils sont passionnés de leur travail. </span>
+						<span>La réussite de notre entreprise L’Aire Visuelle repose surtout sur notre équipe composée de tous les intervenants et professionnels du domaine de l’optique. Toujours à l’affût des nouvelles technologies, ils sont passionnés de leur travail. </span>
 					</div>
 
 					<div style="background-color:rgba(0,174,65,0.72)" class="col-md-4 col-eq-height steps">
 						<h6 class="text-large text-uppercase">02.</h6>
 						<img src="/img/logo-bg-w.png" alt="Aire visuelle" class="logo-bg">
 		                <h3>IDENDITÉ</h3>
-						<span>Notre liberté en tant que bureau « d’optométristes et opticiens » indépendant nous permet de conserver une identité propre et offrir à notre clientèle une très grande diversité de produits. Notre engagement envers notre clientèle est primordial et le client demeure notre priorité ! </span>
+						<span>Notre liberté en tant que bureau d’optométristes et opticiens indépendant nous permet de conserver une identité propre et offrir à notre clientèle une très grande diversité de produits. Notre engagement envers notre clientèle est primordial et le client demeure notre priorité ! </span>
 					</div>
 
 					<div style="background-color:rgba(0,174,65,0.5)" class="col-md-4 col-eq-height steps">
 						<h6 class="text-large text-uppercase">03.</h6>
 						<img src="/img/logo-bg-w.png" alt="Aire visuelle" class="logo-bg">
 		                <h3>STYLE</h3>
-						<span>Notre nouvel emplacement, et sa grande salle de montre, vaste et moderne, vous offre le plus grand choix de montures en ville ! « L’Aire Visuelle » devient une référence dans le domaine des soins oculo-visuel ! </span>
+						<span>Notre nouvel emplacement, et sa grande salle de montre, vaste et moderne, vous offre le plus grand choix de montures en ville ! L’Aire Visuelle devient une référence dans le domaine des soins oculo-visuel ! </span>
 					</div>
 				</div>
 		</section>
@@ -64,7 +64,7 @@
 			<div class="container">
 				<div class="heading heading-center">
 					<h2>Une équipe de professionnels à votre service</h2>
-					<span class="lead">Les membres de notre équipe de professionnels se composent de 4 optométristes, 3 opticiens ainsi que des conseillères-stylistes</span>
+					<span class="lead">Les membres de notre équipe de professionnels se composent de 4 optométristes, 4 opticiens ainsi que des conseillères-stylistes</span>
 				</div>
 				<div class="row team-members team-members-shadow m-b-40">
 					{{ range sort .Site.Data.equipe.equipe ".ordre"}}
@@ -104,12 +104,12 @@
 				<div class="row p-b-40">
 					<div class="col-md-3">
 						<div class="heading heading text-left">
-							<h2>L'aire visuelle en image</h2>
+							<h2>L'Aire Visuelle en images</h2>
 							
 						</div>
 					</div>
 					<div class="col-md-9">
-						<p>Après des années de travail, l’équipe de « L’Aire Visuelle » voulait « changer d’AIRE ». Elle a donc demandé à la firme d’architectes « La SHED architecture » de lui créer une clinique de facture moderne, spacieuse, au design épuré et fonctionnel. Résultat? Un espace hors du commun, aéré et lumineux, axé sur l’expérience client. Venez voir par vous-même!</p>
+						<p>Après des années de travail, l’équipe de L’Aire Visuelle voulait changer d’AIRE. Elle a donc demandé à la firme d’architectes La SHED architecture de lui créer une clinique de facture moderne, spacieuse, au design épuré et fonctionnel. Résultat? Un espace hors du commun, aéré et lumineux, axé sur l’expérience client. Venez voir par vous-même!</p>
 						<!-- Gallery -->
               <div class="grid-layout grid-3-columns" data-margin="20" data-item="grid-item" data-lightbox="gallery">
                   <div class="grid-item">
