--- a/themes/airevisuelle/assets/scss/custom.scss
+++ b/themes/airevisuelle/assets/scss/custom.scss
@@ -146,6 +146,12 @@
 }
 /* Footer */
 
+.widget-contact-us {
+	.list-icon i {
+		width: 0;
+		margin-right: 20px;
+	}
+}
 /* Accueil */
 #slider .slide .slide-captions {
 	h1 {
