--- a/themes/airevisuelle/layouts/singles/rendez-vous.html
+++ b/themes/airevisuelle/layouts/singles/rendez-vous.html
@@ -5,9 +5,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 clearfix">
-                   <h1 class="text-uppercase">{{.Params.titre}}</h1> 
+                   <h1 class="text-uppercase {{ if not .Params.both }}text-center{{ end }}">{{.Params.titre}}</h1> 
                 </div>
-                <div class="col-md-6">
+                {{ if .Params.od }}
+                <div class="col-md-6 {{ if not .Params.both }}col-md-offset-3{{ end }}">
                     <h2 class="text-uppercase">O.D</h2>
                     <div class="row team-members team-members-shadow">
                         {{ range sort .Site.Data.equipe.equipe ".ordre"}}
@@ -23,7 +24,7 @@
                         {{ end }}
                         {{ end }}
                         <div class="col-md-12">
-                            <p>Vous pouvez réserver en ligne directement dans leur horaire respectif.</p>
+                            <p>Vous pouvez réserver en ligne directement dans l'horaire respectif de <strong>nos optométristes</strong>.</p>
                             
                             <p>Nous sommes disponibles pour répondre à toutes vos questions, ainsi que pour vous conseiller dans le choix de lunettes de prescription, de lunettes solaires ou de verres de contact.</p>
                             <a class="btn btn-rounded btn-reveal btn-reveal-left" href="{{.Site.Data.globals.rdvlink}}" target="_blank"><span class="btn-label">Prendre rendez-vous</span><i class="fa fa-arrow-right"></i></a>
@@ -51,7 +52,9 @@
                     </div>
 
                 </div>
-                <div class="col-md-6 od-box">
+                {{ end }}
+                {{ if .Params.ood }}
+                <div class="col-md-6 od-box {{ if not .Params.both }}col-md-offset-3{{ end }}">
                     <h2 class="text-uppercase">O.O.D</h2>
                     <div class="row team-members team-members-shadow">
                         {{ range sort .Site.Data.equipe.equipe ".ordre"}}
@@ -70,7 +73,7 @@
                             <p>Vous pouvez remplir le formulaire ci-bas directement pour réserver une plage horaire avec eux.</p>
                         </div>
                     </div>
-                    <form class="widget-contact-form" action="/merci" role="form" method="post">
+                    <form class="widget-contact-form" action="/merci" role="form" method="post" name="{{.Params.identifiant}}-{{.Lang}}">
                         
                         <div class="row">
                             <div class="form-group col-sm-6">
@@ -128,6 +131,7 @@
                         <button class="btn btn-rounded btn-reveal btn-reveal-left" type="submit" id="form-submit"><span class="btn-label">Prendre rendez-vous</span><i class="fa fa-arrow-right"></i></button>
                     </form>
                 </div>
+                {{ end }}
             </div>
 
             <div class="row m-t-40 hidden-md hidden-lg">
