--- a/themes/airevisuelle/layouts/partials/header/nav.html
+++ b/themes/airevisuelle/layouts/partials/header/nav.html
@@ -3,14 +3,14 @@
     <div class="container">
         <nav>
             <ul>
-                <li class="dropdown"> <a href="/catalogue">Catalogue</a></li>
-                <li class="dropdown"> <a href="/a-propos">À propos</a></li>
+                <li> <a href="/catalogue">Catalogue</a></li>
+                <li > <a href="/a-propos">À propos</a></li>
                 <li class="dropdown"> <a href="/services">Services</a>
                     {{- partial "header/dropdown1.html" . -}}
                 </li>
-                <li class="dropdown"> <a href="/services/examen-de-la-vue">Examen de la vue</a></li>
-                <li class="dropdown mega-menu-item"> <a href="/promotions">Promotions</a></li> 
-                <li class="dropdown mega-menu-item"> <a href="/nous-rejoindre">Contact</a></li>
+                <li> <a href="/services/examen-de-la-vue">Examen de la vue</a></li>
+                <li> <a href="/promotions">Promotions</a></li> 
+                <li> <a href="/nous-rejoindre">Contact</a></li>
             </ul>
         </nav>
     </div>
