--- a/themes/airevisuelle/layouts/partials/site-footer.html
+++ b/themes/airevisuelle/layouts/partials/site-footer.html
@@ -66,13 +66,13 @@
                 <li><a href="/catalogue">Catalogue</a></li>
                 <li><a href="/services">Services</a></li>
                 <li><a href="/promotions">Promotions</a></li>
-                <li><a href="/articles">Articles</a></li>
-                <li><a href="/contactez-nous">Contact</a></li>
+                <li><a href="/a-propos">À propos</a></li>
+                <li><a href="/nous-rejoindre">Contact</a></li>
               </ul>
             </div>
             <!-- end: Footer widget area 2 --> 
           </div>
-          <div class="col-md-3"> 
+          <div class="col-md-3 hidden-xs"> 
             <!-- Footer widget area 3 -->
             <div class="widget">
               <h4>Nos articles les plus récents</h4>
