--- a/themes/airevisuelle/layouts/singles/nous-rejoindre.html
+++ b/themes/airevisuelle/layouts/singles/nous-rejoindre.html
@@ -14,41 +14,37 @@
                     <div class="row m-t-40">
                         <div class="col-md-6">
                             <address>
-	  <strong>L'Aire Visuelle</strong><br>
-		380 boul. Dagenais Est suite 102<br>
-		Laval (Québec)<br>
-		Coin René-Laennec<br>
-	  <abbr title="Phone">P:</abbr> (450) 669-1686
-	</address>
+														  <strong>L'Aire Visuelle</strong><br>
+															380 boul. Dagenais Est suite 102<br>
+															Laval (Québec)<br>
+															Coin René-Laennec<br>
+														  <abbr title="Phone">P:</abbr> (450) 669-1686
+														</address>
                         </div>
                         <div class="col-md-6">
                             <address>
-	  <strong>Heures d'ouverture</strong><br>
-	  Lundi au jeudi : 9 h à 20 h<br>
-		Vendredi : 9 h à 18 h<br>
-		Samedi : 10 h à 16 h<br>
-		Dimanche : Fermé<br>
-	</address>
+														  <strong>Heures d'ouverture</strong><br>
+														  Lundi au jeudi : 9 h à 20 h<br>
+															Vendredi : 9 h à 18 h<br>
+															Samedi : 10 h à 16 h<br>
+															Dimanche : Fermé<br>
+														</address>
                         </div>
-                    </div>
-
-
-
-
-                    <div class="social-icons m-t-30 social-icons-colored">
-                        <ul>
-                            <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="social-google"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                            <li class="social-pinterest"><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                            <li class="social-vimeo"><a href="#"><i class="fa fa-vimeo-square"></i></a></li>
-                            <li class="social-linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>
-                    </div>
+                        <div class="social-icons m-t-20 m-b-20 social-icons-colored col-md-12">
+		                        <ul>
+		                            <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
+		                            <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+		                            <li class="social-google"><a href="#"><i class="fa fa-google-plus"></i></a></li>
+		                            <li class="social-pinterest"><a href="#"><i class="fa fa-pinterest"></i></a></li>
+		                            <li class="social-vimeo"><a href="#"><i class="fa fa-vimeo-square"></i></a></li>
+		                            <li class="social-linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+		                        </ul>
+		                    </div>
+		                  </div>
                 </div>
 
                 <div class="col-md-6">
-                    <form class="widget-contact-form" action="include/contact-form.php" role="form" method="post">
+                    <form class="widget-contact-form" action="/" name="contact" role="form" method="post">
                         <div class="row">
                             <div class="form-group col-sm-6">
                                 <label for="name">Nom</label>
