--- a/themes/airevisuelle/layouts/partials/header/nav.html
+++ b/themes/airevisuelle/layouts/partials/header/nav.html
@@ -3,8 +3,9 @@
     <div class="container">
         <nav>
             <ul>
-                <li> <a href="/catalogue">Catalogue</a></li>
-                <li > <a href="/a-propos">À propos</a></li>
+                <li class="visible-xs visible-sm"><a href="{{.Site.BaseURL}}">Accueil</a></li>
+                <li><a href="/catalogue">Catalogue</a></li>
+                <li><a href="/a-propos">À propos</a></li>
                 <li class="dropdown"> <a href="/services">Services</a>
                     {{- partial "header/dropdown1.html" . -}}
                 </li>
