--- a/themes/airevisuelle/layouts/partials/footer/site-scripts.html
+++ b/themes/airevisuelle/layouts/partials/footer/site-scripts.html
@@ -1,5 +1,4 @@
 {{ with .Site.Params.googleapikey }}
-<script async defer src="https://maps.googleapis.com/maps/api/js?key={{.}}"
-  type="text/javascript"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key={{.}}" type="text/javascript"></script>
 {{ end }}
 <script src="/js/main.min.js"></script>
