Last fixes before pushing online

--- a/themes/airevisuelle/assets/scss/custom.scss
+++ b/themes/airevisuelle/assets/scss/custom.scss
@@ -321,6 +321,20 @@ section {
 	}
 }
 
+/* Merci */
+#merci {
+	padding: 40px;
+    margin: auto;
+    max-width: 800px;
+    p {
+    	text-align: justify;
+    	a {
+    		text-decoration: underline;
+    	}
+    }
+}
+	
+
 /*==================================
 =            Srdjan CSS            =
 ==================================*/
