--- a/themes/airevisuelle/layouts/partials/site-footer.html
+++ b/themes/airevisuelle/layouts/partials/site-footer.html
@@ -6,17 +6,17 @@
           <div class="col-md-4"> 
             <!-- Footer widget area 1 -->
             <div class="widget  widget-contact-us" style="background-image: url('/images/world-map-dark.png'); background-position: 50% 20px; background-repeat: no-repeat">
-              <h4>L'aire visuelle</h4>
+              <h4>L'Aire visuelle</h4>
               <ul class="list-icon">
                 <li><i class="fa fa-map-marker"></i>380 boul. Dagenais Est, suite 102 <br>
                   Laval (Québec), Coin René-Laennec</li>
                 <li><i class="fa fa-phone"></i>(450) 669-1686 </li>
-                <li><i class="fa fa-envelope"></i><a href="mailto:first.last@example.com">info@airevisuelle.com</a></li>
+                <li><i class="fa fa-envelope"></i><a href="mailto:info@lairevisuelle.com">info@lairevisuelle.com</a></li>
                 <li> <br>
                   <i class="fa fa-clock-o"></i>Lundi - Jeudi: <strong>08:00 - 20:00</strong> <br>
                   Vendredi <strong>9:00 - 18:00</strong><br>
                   Samedi: <strong>10:00 - 16:00</strong><br>
-                  Sunday: <strong>Fermé</strong> </li>
+                  Dimanche: <strong>Fermé</strong> </li>
               </ul>
               <!-- Social icons -->
               <div class="social-icons social-icons-border float-left m-t-20">
