--- a/themes/airevisuelle/layouts/partials/site-footer.html
+++ b/themes/airevisuelle/layouts/partials/site-footer.html
@@ -62,12 +62,12 @@
             <div class="widget">
               <h4>Liens rapides</h4>
               <ul class="list-icon list-icon-arrow">
-                <li><a href="/">Accueil</a></li>
-                <li><a href="/catalogue">Catalogue</a></li>
-                <li><a href="/services">Services</a></li>
-                <li><a href="/promotions">Promotions</a></li>
-                <li><a href="/a-propos">À propos</a></li>
-                <li><a href="/nous-rejoindre">Contact</a></li>
+                <li><a href="{{.Site.BaseURL}}">Accueil</a></li>
+                <li><a href="{{.Site.BaseURL}}catalogue">Catalogue</a></li>
+                <li><a href="{{.Site.BaseURL}}services">Services</a></li>
+                <li><a href="{{.Site.BaseURL}}promotions">Promotions</a></li>
+                <li><a href="{{.Site.BaseURL}}a-propos">À propos</a></li>
+                <li><a href="{{.Site.BaseURL}}nous-rejoindre">Contact</a></li>
               </ul>
             </div>
             <!-- end: Footer widget area 2 --> 
