--- a/themes/airevisuelle/layouts/partials/header/dropdown1.html
+++ b/themes/airevisuelle/layouts/partials/header/dropdown1.html
@@ -1,6 +1,6 @@
 <ul class="dropdown-menu">
-    <li><a href="/services/lunetterie">Lunetterie</a></li>
-    <li><a href="/services/opticien">Opticien</a></li>
-    <li><a href="/services/optometrie">Optométrie</a></li>
-    <li><a href="/services/verres-de-contact">Verres de contact</a></li>
+    <li><a href="{{.Site.BaseURL}}services/lunetterie">Lunetterie</a></li>
+    <li><a href="{{.Site.BaseURL}}services/opticien">Opticien</a></li>
+    <li><a href="{{.Site.BaseURL}}services/optometrie">Optométrie</a></li>
+    <li><a href="{{.Site.BaseURL}}services/verres-de-contact">Verres de contact</a></li>
 </ul>
