--- a/themes/airevisuelle/layouts/partials/header/menubar.html
+++ b/themes/airevisuelle/layouts/partials/header/menubar.html
@@ -24,10 +24,10 @@
                 <ul>
                     <li>
                         <!--top search-->
-                        <a id="top-search-trigger" href="#" class="toggle-item">
+                        <!-- <a id="top-search-trigger" href="#" class="toggle-item">
                             <i class="fa fa-search"></i>
                             <i class="fa fa-close"></i>
-                        </a>
+                        </a> -->
                         <!--end: top search-->
                     </li>
                     <!-- <li>
