--- a/themes/airevisuelle/layouts/partials/header/nav.html
+++ b/themes/airevisuelle/layouts/partials/header/nav.html
@@ -4,14 +4,14 @@
         <nav>
             <ul>
                 <li class="visible-xs visible-sm"><a href="{{.Site.BaseURL}}">Accueil</a></li>
-                <li><a href="/catalogue">Catalogue</a></li>
-                <li><a href="/a-propos">À propos</a></li>
-                <li class="dropdown"> <a href="/services">Services</a>
+                <li><a href="{{.Site.BaseURL}}catalogue">Catalogue</a></li>
+                <li><a href="{{.Site.BaseURL}}a-propos">À propos</a></li>
+                <li class="dropdown"> <a href="{{.Site.BaseURL}}services">Services</a>
                     {{- partial "header/dropdown1.html" . -}}
                 </li>
-                <li> <a href="/services/examen-de-la-vue">Examen de la vue</a></li>
-                <li> <a href="/promotions">Promotions</a></li> 
-                <li> <a href="/nous-rejoindre">Contact</a></li>
+                <li> <a href="{{.Site.BaseURL}}services/examen-de-la-vue">Examen de la vue</a></li>
+                <li> <a href="{{.Site.BaseURL}}promotions">Promotions</a></li> 
+                <li> <a href="{{.Site.BaseURL}}nous-rejoindre">Contact</a></li>
             </ul>
         </nav>
     </div>
