--- a/themes/airevisuelle/layouts/services/single.html
+++ b/themes/airevisuelle/layouts/services/single.html
@@ -112,7 +112,7 @@
                             </div>
                             <!--End: Services-->
 
-                            <div class="widget ">
+                            <!-- <div class="widget ">
                                 <h4 class="widget-title">{{ i18n "recent_articles" }}</h4>
                                 <div class="post-thumbnail-list">
                                     {{ range where .Site.RegularPages "Type" "articles" }}
@@ -122,13 +122,11 @@
                                         {{ end }}
                                         <div class="post-thumbnail-content">
                                             <a href="{{.Permalink}}">{{.Title}}</a>
-                                            <!-- <span class="post-date"><i class="fa fa-clock-o"></i> 6m ago</span>
-                                            <span class="post-category"><i class="fa fa-tag"></i> Technology</span> -->
                                         </div>
                                     </div>
                                     {{ end }}
                                 </div>
-                            </div>
+                            </div> -->
                             <!--End: Tabs with Posts-->
 
 
